# audible-downloader

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  batch_download.py  compose.yaml  pyproject.toml
.github/workflows/: docker.yml
audible_downloader/: __init__.py  cli.py  db.py  web.py  worker.py
audible_downloader/static/: app.js  index.html  style.css  tinder.css  tinder.html  tinder.js
