[project]
name = "audible-downloader"
version = "0.1.0"
description = "CLI for downloading and converting Audible audiobooks to MP3"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "audible>=0.10.0",
    "audible-cli>=0.3.3",
    "fastapi>=0.122.0",
    "inquirerpy>=0.3.4",
    "itsdangerous>=2.2.0",
    "python-multipart>=0.0.20",
    "rich>=13.0.0",
    "uvicorn>=0.38.0",
]

[project.scripts]
audible-downloader = "audible_downloader.cli:main"
audible-downloader-web = "audible_downloader.web:run_server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
